[tool.poetry]
name = "sales-agent"
version = "0.1.0"
description = "Sales agent with calendar integration"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "agent", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"

# Core dependencies
python-dotenv = "^1.0.0"
pydantic = "^2.6.0"

# LangChain ecosystem
langchain = "^0.3.25"
langchain-openai = "^0.3.17"
langchain-community = "^0.1.0"  # Downgraded to version that has GoogleCalendarToolkit
langchain-core = "^0.3.60"
langgraph = "^0.4.5"

# Google Calendar integration
google-auth-oauthlib = "^1.2.2"
google-auth-httplib2 = "^0.2.0"
google-api-python-client = "^2.169.0"
langchain-google-calendar = "^0.0.3"  # Specific package for Google Calendar integration

# Async support
anyio = "^4.4.0"

# LangSmith
langsmith = "^0.3.42"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
ruff = "^0.11.10"
black = "^25.1.0"
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"
types-python-dateutil = "^2.9.0.20240316"  # For better type checking
typing-extensions = "^4.12.2"  # For better type hints

[tool.ruff]
select = [
    "E",    # pycodestyle
    "F",    # pyflakes
    "I",    # isort
    "D",    # pydocstyle
    "D401", # First line should be in imperative mood
    "T201",
    "UP",
]
ignore = [
    "UP006",
    "UP007",
    "UP035",
    "D417",
    "E501"
]
